--- a/App/app/src/main/res/layout/app_bar_main.xml
+++ b/App/app/src/main/res/layout/app_bar_main.xml
@@ -60,9 +60,21 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:text="Listening ..."
+            app:layout_constraintBottom_toTopOf="@+id/resetButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/resetButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|bottom"
+            android:padding="16dp"
+            android:text="Reset"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+        />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
