--- a/App/app/src/main/res/layout/home_page.xml
+++ b/App/app/src/main/res/layout/home_page.xml
@@ -23,15 +23,6 @@
         android:layout_width="match_parent"
         android:layout_height="676dp">
 
-        <include
-            layout="@layout/content_main"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/frequencyTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
         <TextView
             android:id="@+id/frequencyTextView"
             android:layout_width="wrap_content"
@@ -60,6 +51,17 @@
             android:layout_gravity="center|bottom"
             android:padding="16dp"
             android:text="Reset"
+            app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/bottomMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
