--- a/App/app/src/main/res/layout/settings_page.xml
+++ b/App/app/src/main/res/layout/settings_page.xml
@@ -17,7 +17,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"
-            app:title="Settings" />
+            app:title="@string/button_settings" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:labelFor="@+id/rg_display_unit"
-                android:text="Display Unit" />
+                android:text="@string/display_unit_label" />
 
             <RadioGroup
                 android:id="@+id/rg_display_unit"
@@ -53,51 +53,65 @@
                 <RadioButton
                     android:id="@+id/rb_lb"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
+                    android:layout_height="48dp"
                     android:checked="true"
-                    android:text="lb" />
+                    android:minHeight="48dp"
+                    android:padding="12dp"
+                    android:text="@string/radio_button_lb" />
 
                 <RadioButton
                     android:id="@+id/rb_kg"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="kg" />
+                    android:layout_height="48dp"
+                    android:checked="true"
+                    android:minHeight="48dp"
+                    android:padding="12dp"
+                    android:text="@string/radio_button_kg" />
             </RadioGroup>
 
-            <!-- Racquet Head Size Input -->
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:labelFor="@+id/et_racquet_head_size"
-                android:text="Racquet Head Size (sq in)" />
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/et_racquet_head_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:autofillHints="headSize"
-                android:inputType="numberDecimal"
-                android:text="100" />
+                <!-- Racquet Head Size Input -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:labelFor="@+id/et_racquet_head_size"
+                    android:text="@string/racquet_head_size_sq_in_label" />
 
-            <!-- String Mass Density Input -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:labelFor="@+id/et_string_mass_density"
-                android:text="Stretched String Mass Density (g/m)" />
+                <EditText
+                    android:id="@+id/et_racquet_head_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="16dp"
+                    android:autofillHints="headSize"
+                    android:inputType="numberDecimal"
+                    android:maxWidth="200dp"
+                    android:text="@string/racquet_head_size_100" />
 
-            <EditText
-                android:id="@+id/et_string_mass_density"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:autofillHints="stringMassDensity"
-                android:inputType="numberDecimal"
-                android:text="1.50" />
+                <!-- String Mass Density Input -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:labelFor="@+id/et_string_mass_density"
+                    android:text="@string/string_mass_density_g_m_label" />
+
+                <EditText
+                    android:id="@+id/et_string_mass_density"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_marginBottom="16dp"
+                    android:autofillHints="stringMassDensity"
+                    android:inputType="numberDecimal"
+                    android:maxWidth="200dp"
+                    android:text="@string/string_mass_density_1_50" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/button_back"
