--- a/App/app/src/main/res/layout/racquet_list.xml
+++ b/App/app/src/main/res/layout/racquet_list.xml
@@ -31,6 +31,7 @@
         android:id="@+id/fab_add_racquet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
         android:clickable="true"
         android:contentDescription="@string/add_a_racquet"
         android:focusable="true"
