Updated UI for Home Screen & Settings

--- a/App/app/src/main/res/layout/settings_page.xml
+++ b/App/app/src/main/res/layout/settings_page.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    tools:context=".SettingsActivity"
+    android:background="@drawable/green_splash">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
