--- a/App/app/src/main/res/layout/home_page.xml
+++ b/App/app/src/main/res/layout/home_page.xml
@@ -1,85 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity"
-    tools:openDrawer="start">
+    tools:context=".MainActivity">
 
-    <!-- Primary layout for content -->
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <!-- AppBarLayout with Toolbar for the app bar -->
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/Theme.Tennis_tune.AppBarOverlay">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/top_bar_home"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay" />
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-        <!-- Content Layout -->
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/top_bar_home">
+            android:background="@drawable/green_splash">
 
-            <TextView
-                android:id="@+id/frequencyTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <LinearLayout
+                android:id="@+id/bottomMenu"
+                android:layout_width="390dp"
+                android:layout_height="92dp"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:padding="16dp"
-                android:text="@string/text_detecting"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintBottom_toTopOf="@+id/my_visualizer_container"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <LinearLayout
                 android:id="@+id/my_visualizer_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="172dp"
+                android:elevation="2dp"
                 android:orientation="horizontal"
                 android:padding="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/resetButton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <Button
-                android:id="@+id/resetButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:padding="16dp"
-                android:text="@string/button_reset"
+                app:layout_anchorGravity="center"
                 app:layout_constraintBottom_toTopOf="@+id/bottomMenu"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
-            <LinearLayout
-                android:id="@+id/bottomMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</androidx.drawerlayout.widget.DrawerLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="391dp"
+        android:layout_height="342dp"
+        android:elevation="1dp"
+        app:layout_anchor="@+id/constraintLayout"
+        app:layout_anchorGravity="center" />
+
+    <TextView
+        android:id="@+id/frequencyTextView"
+        android:layout_width="match_parent"
+        android:layout_height="181dp"
+        android:elevation="2dp"
+        android:fontFamily="monospace"
+        android:padding="16dp"
+        android:text="@string/text_detecting"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#474747"
+        android:textSize="60sp"
+        app:layout_anchor="@+id/recyclerView"
+        app:layout_anchorGravity="top|center" />
+
+    <Button
+        android:id="@+id/resetButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:padding="16dp"
+        android:text="@string/button_reset"
+        android:textColor="#FFFFFF"
+        app:layout_anchor="@+id/recyclerView"
+        app:layout_anchorGravity="bottom|center"
+        app:strokeColor="#DA0000" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="228dp"
+        android:layout_height="250dp"
+        android:elevation="1dp"
+        app:layout_anchor="@+id/recyclerView"
+        app:layout_anchorGravity="top|center"
+        app:srcCompat="@drawable/green_circle_3d_icon" />
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
