--- a/App/app/src/main/res/layout/home_page.xml
+++ b/App/app/src/main/res/layout/home_page.xml
@@ -60,13 +60,15 @@
                 android:id="@+id/unitTextView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginBottom="16dp"
                 android:elevation="2dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center_horizontal|top"
+                android:maxLines="1"
                 android:padding="0dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 app:autoSizeMaxTextSize="34sp"
-                app:autoSizeMinTextSize="12sp"
+                app:autoSizeMinTextSize="8sp"
                 app:autoSizeStepGranularity="2sp"
                 app:layout_constraintBottom_toTopOf="@+id/my_visualizer_container"
                 app:layout_constraintEnd_toEndOf="parent"
