Updated color design of app

--- a/App/app/src/main/res/layout/add_edit_racquet.xml
+++ b/App/app/src/main/res/layout/add_edit_racquet.xml
@@ -3,19 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".AddEditRacquetActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black_light"
         android:theme="@style/Theme.Tennis_tune.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/top_bar_settings"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/black_light"
             app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"
             app:title="@string/add_edit_racquet" />
 
@@ -41,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:labelFor="@+id/edit_racquet_racquet_name"
-                android:text="@string/racquet_name" />
+                android:text="@string/racquet_name"
+                android:textColor="@color/grey_light" />
 
             <EditText
                 android:id="@+id/edit_racquet_racquet_name"
@@ -51,7 +54,8 @@
                 android:autofillHints="racquetName"
                 android:inputType="text"
                 android:maxWidth="400dp"
-                android:text="@string/new_racquet" />
+                android:text="@string/new_racquet"
+                android:textColor="@color/grey_light" />
 
             <!-- Racquet Head Size Input -->
             <TextView
@@ -59,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:labelFor="@+id/edit_racquet_racquet_head_size"
-                android:text="@string/racquet_head_size_sq_in_label" />
+                android:text="@string/racquet_head_size_sq_in_label"
+                android:textColor="@color/grey_light" />
 
             <EditText
                 android:id="@+id/edit_racquet_racquet_head_size"
@@ -69,7 +74,8 @@
                 android:autofillHints="headSize"
                 android:inputType="number|numberDecimal"
                 android:maxWidth="200dp"
-                android:text="@string/racquet_head_size_100" />
+                android:text="@string/racquet_head_size_100"
+                android:textColor="@color/grey_light" />
 
             <!-- String Mass Density Input -->
             <TextView
@@ -77,7 +83,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:labelFor="@+id/edit_racquet_string_mass_density"
-                android:text="@string/string_mass_density_g_m_label" />
+                android:text="@string/string_mass_density_g_m_label"
+                android:textColor="@color/grey_light" />
 
             <EditText
                 android:id="@+id/edit_racquet_string_mass_density"
@@ -87,7 +94,8 @@
                 android:autofillHints="stringMassDensity"
                 android:inputType="number|numberDecimal"
                 android:maxWidth="200dp"
-                android:text="@string/string_mass_density" />
+                android:text="@string/string_mass_density"
+                android:textColor="@color/grey_light" />
 
             <Button
                 android:id="@+id/edit_racquet_button_save"
@@ -95,6 +103,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/button_save"
+                android:textColor="@color/black"
+                android:backgroundTint="@color/grey_light"
                 app:layout_anchor="@id/appBarLayout"
                 app:layout_anchorGravity="bottom|start" />
         </LinearLayout>
