--- a/App/app/src/main/res/drawable/baseline_restart_alt_24.xml
+++ b/App/app/src/main/res/drawable/baseline_restart_alt_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:tint="#8C9EFF"
+    android:tint="@color/grey_light"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
