--- a/App/app/src/main/res/values/colors.xml
+++ b/App/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#272727</color>
+    <color name="black_light">#1B1A1A</color>
+    <color name="grey_light">#FFC6C5C5</color>
+    <color name="green">#00ff00</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
