--- a/App/app/src/main/res/layout/home_page.xml
+++ b/App/app/src/main/res/layout/home_page.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
@@ -17,8 +16,8 @@
             android:id="@+id/top_bar_home"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/black_light"
-            app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"/>
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
@@ -45,7 +44,6 @@
                 android:text="@string/text_detecting"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="@color/grey_light"
                 app:autoSizeMaxTextSize="120sp"
                 app:autoSizeMinTextSize="12sp"
                 app:autoSizeStepGranularity="2sp"
@@ -67,7 +65,6 @@
                 android:maxLines="1"
                 android:padding="0dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="@color/grey_light"
                 app:autoSizeMaxTextSize="34sp"
                 app:autoSizeMinTextSize="8sp"
                 app:autoSizeStepGranularity="2sp"
