--- a/App/app/src/main/res/layout/racquet_list_item.xml
+++ b/App/app/src/main/res/layout/racquet_list_item.xml
@@ -40,7 +40,7 @@
         android:id="@+id/racquetListItem"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:background="@color/grey_light">
+        android:background="@android:color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -63,8 +63,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="48dp"
+                android:layout_marginEnd="16dp"
                 android:gravity="center|start"
-                android:textColor="@color/black"
                 app:autoSizeMaxTextSize="48sp"
                 app:autoSizeMinTextSize="8sp"
                 app:autoSizeStepGranularity="2sp"
