--- a/App/app/src/main/res/layout/settings_page.xml
+++ b/App/app/src/main/res/layout/settings_page.xml
@@ -3,21 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
     tools:context=".SettingsActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black_light"
         android:theme="@style/Theme.Tennis_tune.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/top_bar_settings"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/black_light"
+            android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.Tennis_tune.PopupOverlay"
             app:title="@string/button_settings" />
 
@@ -42,8 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:labelFor="@+id/rg_display_unit"
-                android:text="@string/display_unit_label"
-                android:textColor="@color/grey_light" />
+                android:text="@string/display_unit_label" />
 
             <RadioGroup
                 android:id="@+id/rg_display_unit"
@@ -59,9 +56,7 @@
                     android:checked="true"
                     android:minHeight="48dp"
                     android:padding="8dp"
-                    android:text="@string/radio_button_lb"
-                    android:textColor="@color/grey_light"
-                    android:buttonTint="@color/grey_light"/>
+                    android:text="@string/radio_button_lb" />
 
                 <RadioButton
                     android:id="@+id/rb_kg"
@@ -70,9 +65,7 @@
                     android:checked="true"
                     android:minHeight="48dp"
                     android:padding="12dp"
-                    android:text="@string/radio_button_kg"
-                    android:textColor="@color/grey_light"
-                    android:buttonTint="@color/grey_light"/>
+                    android:text="@string/radio_button_kg" />
             </RadioGroup>
 
             <Button
@@ -81,8 +74,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/button_save"
-                android:textColor="@color/black"
-                android:backgroundTint="@color/grey_light"
                 app:layout_anchor="@id/appBarLayout"
                 app:layout_anchorGravity="bottom|start" />
         </LinearLayout>
